stop author bio text from wrapping

--- a/static/css/partials/_component.article-author.scss
+++ b/static/css/partials/_component.article-author.scss
@@ -3,7 +3,7 @@
 }
 
 .article-author__media-body {
-    overflow:initial;
+    // overflow:initial;
 }
 
 .article-author__name {
